test read jws success